--- a/views/result.erb
+++ b/views/result.erb
@@ -12,7 +12,7 @@
   <h1>potly's sort</h1>
   <p>
     「<%=@link.url%>」の短縮URLを作成しました<br>
-    <a href="http://localhost:55014/<%=@link.url_short%>" id="url">http://localhost:55014/<%=@link.url_short%></a><br>
+    <a href="https://l.combu.dev/<%=@link.url_short%>" id="url">https://l.combu.dev/<%=@link.url_short%></a><br>
     <button class="button button1" onclick="copy_to_clipboard();">短縮リンクをコピー</button>
   </p>
   <p>
