--- a/views/index.erb
+++ b/views/index.erb
@@ -12,10 +12,8 @@
 <body>
   <div id="content_top">
     <h1>potly's sort</h1>
-    <p>
-      誰でも簡単にリンクを短縮できるサービスです。<br>
-      リンクを短縮したい場合は、下のフォームにURLを入力してください。<br>
-      短縮されたURLは、下のリストで確認できます。
+    <p id="top">
+      誰でも簡単にリンクを短縮できるサービスです。リンクを短縮したい場合は、下のフォームにURLを入力してください。短縮されたURLは、下のリストで確認できます。
     </p>
     <input type="text" name="url" id="url" placeholder="短縮したいURLを入力してください">
     <button class="button button1" onclick="send();">短縮</button>
@@ -23,7 +21,10 @@
   <div id="content_result" class="clear">
     <h2>短縮URLを作成しました</h2>
     <p>
-      <div id="url_value" style="display: initial;"></div>
+      <div id="lit">
+        <div id="url_value" style="display: initial;"></div>
+      </div>
+      
       <button class="button button1" onclick="copy_to_clipboard();">短縮リンクをコピー</button>
     </p>
   </div>
@@ -36,8 +37,8 @@
       </tr>
       <%@datas.each do |data|%>
         <tr>
-          <td class="btn">https://l.combu.dev/<%=data.url_short%></td>
-          <td><%=CGI.escapeHTML(data.url)%></td>
+          <td class="css_link">https://l.combu.dev/<%=data.url_short%></td>
+          <td class="css_short"><%=CGI.escapeHTML(data.url)%></td>
         </tr>
       <%end%>
     </table>
