--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1,5 +1,6 @@
 body {
     text-align: center;
+    color:#fff;
     margin: 30px;
 }
 h1 {
@@ -23,17 +24,18 @@ table {
     text-align: left;
     margin: 10px auto 20px;
     font-size: 12px;
-    width: 900px;
 }
 table, th, td {
     border: 1px solid black;
     border-collapse: collapse;
 }
-th, td {
-    width: 500px;
-}
-a {
-    color: #2196F3;
+.css_short {
+    max-width: 500px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3;
 }
 button {
     background-color: #4CAF50;
@@ -48,13 +50,14 @@ footer {
     text-align: center;
     padding-bottom: 10px;
     font-size: 12px;
+    color:#ccc;
 }
 #top {
     margin: auto;
     text-align: left;
     width: 80%;
 }
-#content_top {
+.content {
     height: 210px;
     padding: 15px 0px;
     margin: 10px auto 10px auto;
@@ -62,78 +65,61 @@ footer {
     background-color: #ccc;
 }
 #content_result {
-    height: 150px;
+    height: 180px;
     margin: 0 auto;
     border-radius: 20px;
     background-color: #ccc;
-}
-#content_list {
-    margin: 0 auto;
-    border-radius: 20px;
-    background-color: #ccc;
+    text-align: center;
 }
 .clear {
     display: none;
 }
-@media screen and (max-width: 1000px){
-    table {
-        width: 80%;
+@media screen and (max-width: 1100px){
+    .css_short {
+        max-width: 300px;
     }
 }
-@media screen and (max-width: 780px){
-    #url_value {
-        color: #4CAF50;
-        max-width: 500px;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        white-space: nowrap;
-    }
-    button {
-        margin-top: 10px;
+@media screen and (max-width: 800px){
+    .css_short {
+        max-width: 200px;
     }
 }
 @media screen and (max-width: 700px){
-    #content_top {
-        height: 240px;
-    }
-    input[type=text] {
-        width: 75%;
-    }
-    #lit {
-        max-width: 500px;
-        overflow: hidden;
-        text-overflow: "..";
-        white-space: nowrap;
-    }
-}
-@media screen and (max-width: 500px){
     body {
         margin: 10px;
     }
-    table {
-        min-width: 100px;
+    #content_result{
+        height: 200px;
     }
 }
-@media screen and (max-width: 480px){
-    table {
-        width: 100px;
-        height: 200px;
+@media screen and (max-width: 610px){
+    .css_link {
+        width: 20%;
+    }
+}
+@media screen and (max-width: 600px){
+    .css_link {
+        width: 25%;
     }
     input[type=text] {
         width: 80%;
     }
-    .css_link {
-        width: 80px;
+    #url_value {
+        max-width: 400px;
+        margin: auto;
+        overflow-wrap: break-word;
     }
-    .css_short {
-        max-width: 100px;
-        overflow: hidden;
-        text-overflow: "..";
-        white-space: nowrap;
+    button {
+        margin-top: 15px;
     }
 }
-@media screen and (max-width: 390px){
-    body {
-        margin:5px;
+@media screen and (max-width: 560px){
+    .lit {
+        width: 400px;
+    }
+}
+@media screen and (max-width: 400px){
+    .content {
+        height: 230px;
     }
 }
