--- a/views/index.erb
+++ b/views/index.erb
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
   <meta name="description" content="多機能便利なリンク短縮サービス。安心安全？">
   <title>potly's sort</title>
+  <link rel="icon" href="/assets/img/logo.png"/>
   <link rel="stylesheet" href="/assets/css/main.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script type="text/javascript" src="/assets/js/main.js"></script>
