--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -139,6 +139,9 @@ footer {
     #content_top {
         height: 280px;
     }
+    input[type="text"] {
+        width: 60%;
+    }
 }
 @media screen and (max-width: 345px){
     #content_result {
