--- a/views/index.erb
+++ b/views/index.erb
@@ -14,7 +14,7 @@
   <div id="content_top" class="content">
     <h1>potly's sort</h1>
     <p id="top">
-      誰でも簡単にリンクを短縮できるサービスです。<br>リンクを短縮したい場合は、下のフォームにURLを入力してください。<br>短縮されたURLは、下のリストで確認できます。
+      誰でも簡単にリンクを短縮できるサービスです。<br>下のテキストボックスにURLを入力し、短縮ボタンを押して下さい。<br>短縮されたURLは自動で表示されます。
     </p>
     <input type="text" name="url" id="url" placeholder="短縮したいURLを入力してください">
     <button class="button button1" onclick="send();">短縮</button>
