--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -12,9 +12,9 @@ h1 {
 }
 h1::after {
     content: '';
-    display: inline-block;/*忘れずに！*/
-    width: 40px;/*画像の幅*/
-    height: 50px;/*画像の高さ*/
+    display: inline-block;
+    width: 40px;
+    height: 50px;
     background-image: url(/assets/img/home.png);
     background-size: contain;
     vertical-align: middle;
