--- a/views/index.erb
+++ b/views/index.erb
@@ -4,10 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
   <meta name="description" content="多機能便利なリンク短縮サービス。安心安全？">
+  <meta property="og:image" content="/assets/img/logo.png"/>
   <title>potly's sort</title>
   <link rel="icon" href="/assets/img/logo.png"/>
   <link rel="stylesheet" href="/assets/css/main.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.qrcode/1.0/jquery.qrcode.min.js"></script> 
   <script type="text/javascript" src="/assets/js/main.js"></script>
 </head>
 <body>
@@ -25,27 +27,11 @@
       <div id="lit">
         <p id="url_value"></p>
       </div>
-      
       <button class="button button1" onclick="copy_to_clipboard();">短縮リンクをコピー</button>
     </p>
   </div>
   <footer>
     <p>© 2022 Combu_uni</p>
   </footer>
-  <%# <div id="content_list"> %>
-    <%# <h2>作成済み短縮リンク一覧</h2> %>
-    <%# <table id="table"> %>
-      <%# <tr> %>
-        <%# <th>短縮リンク</th> %>
-        <%# <th>元リンク</th> %>
-      <%# </tr> %>
-      <%# <%@datas.each do |data|%>
-        <%# <tr> %>
-          <%# <td class="css_link">https://l.combu.dev/<%=data.url_short%></td>
-          <%# <td class="css_short"><%=CGI.escapeHTML(data.url)%></td>
-        <%# </tr> %>
-      <%# <%end%>
-    <%# </table> %>
-  <%# </div> %>
 </body>
 </html>
