--- a/views/index.erb
+++ b/views/index.erb
@@ -25,6 +25,7 @@
     <h2>短縮URLを作成しました</h2>
     <p>
       <div id="lit">
+        <img id="qr_img" src="https://chart.apis.google.com/chart?cht=qr&amp;chs=150x150&amp;chl=https://allabout.co.jp/gm/gc/24013/" alt="QRコードの画像">
         <p id="url_value"></p>
       </div>
       <button class="button button1" onclick="copy_to_clipboard();">短縮リンクをコピー</button>
